tests/cases/nestedAssignments.syn
declare function check<T>(x: T): void

interface X {
    n: number
}

const x: X = { n: 0 }
check<1 | 2>(x.n) // error

declare const cond: boolean
if (cond) {
    x.n = 1
    if (x.n !== 2) {} // error
} else {
    x.n = 2
}

check<1 | 2>(x.n) // OK

interface X2 {
    o: X
}

const x2: X2 = { o: { n: 0 } } // { o: x }
check<3 | 4>(x2.o.n) // error

if (cond) {
    x2.o = { n: 3 as const }
} else {
    x2.o.n = 4
}

check<3 | 4>(x2.o.n) // OK


declare function f(x: any): x is number

const x3 = { o: { n: '' as string | number } }
if (f(x3.o.n)) {
    check<{ o: { n: number } }>(x3) // OK
}

check<{ o: { n: number } }>(x3) // error
